--- a/config/database.yml
+++ b/config/database.yml
@@ -20,11 +20,12 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
 
 development:
   <<: *default
-  database: Webapp_development
-  username: Webapp
+  database: Webapp_software_project_2018
+  username: Webapp_2018
   password: <%= ENV['WEBAPP_DATABASE_PASSWORD'] %>
 
   # The specified database role being used to connect to postgres.
@@ -59,7 +60,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: Webapp_test
+  database: Webapp_software_project_2018
+  username: Webapp_2018
+  password: <%= ENV['WEBAPP_DATABASE_PASSWORD'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: Webapp_production
-  username: Webapp
+  database: Webapp_software_project_2018
+  username: Webapp_2018
   password: <%= ENV['WEBAPP_DATABASE_PASSWORD'] %>
