--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -9,6 +9,7 @@ one:
   aim: MyText
   target_group: MyText
   financial_support_needed: 1
+  link: MyText
 
 two:
   project_name: MyText
@@ -19,3 +20,4 @@ two:
   aim: MyText
   target_group: MyText
   financial_support_needed: 1
+  link: MyText
