--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,19 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+*.xml
+.idea/.generators
+.idea/.generators
+.idea/.rakeTasks
+.idea/dataSources.local.xml
+.idea/dataSources/31d8b081-f838-4dfb-9724-da0e5261a62b.xml
+.idea/dataSources/77dacc03-7efc-459a-af12-fbc209a35f74.xml
+.idea/dataSources/77dacc03-7efc-459a-af12-fbc209a35f74/storage_v2/_src_/database/Webapp_software_project_2018.kQVYzw.meta
+.idea/dataSources/77dacc03-7efc-459a-af12-fbc209a35f74/storage_v2/_src_/database/Webapp_software_project_2018.kQVYzw/schema/public.abK9xQ.meta
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/Prototype.iml
+.idea/vcs.xml
+.idea/workspace.xml
